--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,9 @@ jobs:
         run: |
           npm install
           npm run-script build
+          
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2.2.3
+        with:
+          name: dist
+          path: dist/
